# u2f-enclave

./: .gitignore  Cargo.toml  README.md  flake.nix
.cargo/: config.toml
bridge/: Cargo.toml
bridge/src/: lib.rs  main.rs  uhid.rs
ctap/: Cargo.toml
ctap/src/: authenticator.rs  cbor.rs  cred.rs  ctap2.rs  hid.rs  lib.rs
e2e/: Cargo.toml
e2e/src/: coco.rs  lib.rs  snp.rs
e2e/tests/: smoke.rs
enclave/: Cargo.toml  DESIGN.md  link.ld
enclave/src/: boot.rs  greq.rs  main.rs  platform.rs  pv.rs  ram32.s  serial.rs  sev.rs  tdx.rs  virtio.rs  vsock.rs
guest/: Cargo.toml  DESIGN.md  build.rs
guest/src/: boot.rs  greq.rs  handoff.rs  main.rs  platform.rs  pv.rs  ram32.s  seal.rs  serial.rs  sev.rs  virtio.rs  vsock.rs
host/: Cargo.toml  build.rs
host/src/: attest.rs  kvm.rs  main.rs  measure.rs  mmio.rs  sgx.rs  sgx_key_d.in  sgx_key_n.in  sgx_layout.rs  snp.rs  snp_report.rs  state.rs  verify.rs  vhost.rs
scripts/: boot-enclave.sh  remote-test.sh  smoke-kernel.sh  smoke-libfido2.sh  smoke-ssh.sh
sgx/: Cargo.toml  build.rs  link.ld
sgx/src/: entry.s  main.rs
sim/: Cargo.toml
sim/src/: main.rs
vmm/: Cargo.toml  build.rs
vmm/src/: attest.rs  elf.rs  kvm.rs  main.rs  measure.rs  mmio.rs  snp.rs  tdx.rs  verify.rs  vhost.rs
