[workspace]
resolver = "2"
members = ["ctap", "sim", "bridge", "host", "guest", "e2e"]
# guest builds for x86_64-unknown-none only; keep it out of the default
# host build so `cargo build` / `cargo test` stay one-command.
default-members = ["ctap", "sim", "bridge", "host", "e2e"]

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.0.1"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
