[package]
name = "ctap"
description = "no_std CTAPHID + CTAP2 authenticator core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sha2 = { version = "0.10", default-features = false }
hmac = { version = "0.12", default-features = false }
p256 = { version = "0.13", default-features = false, features = ["ecdsa", "arithmetic"] }
subtle = { version = "2", default-features = false }
