[package]
name = "enclave"
description = "Bare-metal SEV-SNP guest that runs the ctap authenticator"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ctap = { path = "../ctap" }
linked_list_allocator = { version = "0.10", default-features = false, features = ["use_spin"] }
