[package]
name = "guest"
description = "Bare-metal SEV-SNP guest that runs the ctap authenticator"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ctap = { path = "../ctap" }
linked_list_allocator = { version = "0.10", default-features = false, features = ["use_spin"] }
# `cpufeatures` compiles to a const `false` on `target_os = "none"`, so the
# AES/GHASH soft backends are picked at compile time and no `cpuid` (which
# would `#VC`) is emitted. Verified by `objdump`.
aes-gcm = { version = "0.10", default-features = false, features = ["aes"] }
