[package]
name = "host"
version.workspace = true
edition.workspace = true
license.workspace = true

# Crate name is the role; binary name is the project.
[[bin]]
name = "u2f-enclave"
path = "src/main.rs"

[dependencies]
libc = "0.2"
bridge = { path = "../bridge" }
ctap = { path = "../ctap" }
vsock = "0.5"
sha2 = "0.10"
p384 = { version = "0.13", default-features = false, features = ["ecdsa"] }
# `native-certs` so the system trust store (and SSL_CERT_FILE overrides)
# applies — corporate proxies, custom CAs.  AMD KDS only; no other network.
ureq = { version = "2", default-features = false, features = ["tls", "native-certs"] }

[build-dependencies]
sha2 = "0.10"
num-bigint = { version = "0.4", default-features = false }
p384 = { version = "0.13", default-features = false, features = ["ecdsa"] }
