[package]
name = "sgx"
description = "Ring-3 SGX enclave that runs the ctap authenticator"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ctap = { path = "../ctap" }
linked_list_allocator = { version = "0.10", default-features = false, features = ["use_spin"] }
