[package]
name = "vmm"
version.workspace = true
edition.workspace = true
license.workspace = true

# The crate is the workspace's VMM; the binary is the project.
[[bin]]
name = "u2f-enclave"
path = "src/main.rs"

[dependencies]
libc = "0.2"
bridge = { path = "../bridge" }
vsock = "0.5"
sha2 = "0.10"
p384 = { version = "0.13", default-features = false, features = ["ecdsa"] }
ureq = "2"
